--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
+            background: linear-gradient(to bottom, #B3E5FC);
             color: #333;
             display: flex;
             flex-direction: column;
