--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: #B3E5FC);
+            background: #B3E5FC;
             color: #333;
             display: flex;
             flex-direction: column;
