--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         }
 
         body {
-            background: #B3E5FC;
+            background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
             color: #333;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding: 40px 20px;
+            padding: 40px 10px;
             text-align: center;
         }
 
