--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
     </header>
 
     <div class="content">
-        
+        <div class="content">
+    <img src="pingvin.png" alt="Min søde pingvin" style="width:auto; height:auto; max-width:100%;"/>
+            
         <button onclick="showAffirmation()">Vis dagens selvreflektion</button>
         <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
         <ul id="todos"></ul>
