--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding: 40px 10px;
+            padding: 0px 0px;
             text-align: center;
         }
 
@@ -100,7 +100,7 @@
 
     <div class="content">
         <div class="content">
-    <img src="pingvin.png" alt="Min søde pingvin" style="width:auto; height:auto; max-width:100%;"/>
+    <img src="billede4.png" alt="Min søde pingvin" style="width:auto; height:auto; max-width:100%;"/>
             
         <button onclick="showAffirmation()">Vis dagens selvreflektion</button>
         <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
