--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 .pingvin-container img {
     width: 100%;
     height: 100%;
-    object-fit: cover;    /* beskærer billedet uden at strække */
+    object-fit: contain;    /* beskærer ikke billedet */
 }
 
 
