--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     aspect-ratio: 9 / 16; /* holder formatet */
     overflow: hidden;
     border-radius: 12px;  /* valgfrit, giver bløde hjørner */
-    margin-bottom: 20px;  /* skubber knappen lidt ned */
+    margin-bottom: 10px 0 20px 0;  /* skubber knappen lidt ned */
 }
 
 .pingvin-container img {
