--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <img src="billede4.png" alt="Min søde pingvin">
     </div>
                 
-        <button onclick="showAffirmation()">Vis dagens selvreflektion</button>
+        <button onclick="showAffirmation()">Vis dagens selvrefleksion</button>
         <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
         <ul id="todos"></ul>
     </div>
