--- a/index.html
+++ b/index.html
@@ -154,10 +154,18 @@
     </div>
 
     <script>
-        // Musik-knap funktion
         const music = document.getElementById("backgroundMusic");
         const musicBtn = document.getElementById("musicBtn");
 
+        // Start musikken automatisk ved indlæsning
+        window.addEventListener("load", () => {
+            music.play().catch(() => {
+                musicBtn.textContent = "🔊"; // Autoplay ikke tilladt på nogle browsere
+            });
+            musicBtn.textContent = "🔇"; // skifter ikon til "sluk"
+        });
+
+        // Tænd/sluk knap
         musicBtn.addEventListener("click", () => {
             if (music.paused) {
                 music.play();
@@ -168,11 +176,11 @@
             }
         });
 
-        // Stop musik, når fanen ikke er aktiv
+        // Stop musikken øjeblikkeligt, når fanen/tabben ikke er aktiv
         document.addEventListener("visibilitychange", () => {
             if (document.hidden) {
                 music.pause();
-                musicBtn.textContent = "🔊"; // ikon tilbage til "tænd"
+                musicBtn.textContent = "🔊";
             }
         });
 
