--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             width: 100%;
         }
 
-        .content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            margin-top: 5px;
-        }
+       .content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around; /* 👈 fordeler elementerne jævnt */
+    margin-top: 5px;
+}
 
         .pingvin-container {
             width: 600px;
