--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             music.play().catch(() => {
                 musicBtn.textContent = "🔊"; // Autoplay ikke tilladt på nogle browsere
             });
-            musicBtn.textContent = "🔇"; // skifter ikon til "sluk"
+            musicBtn.textContent = "🔇🔊"; // skifter ikon til "sluk"
         });
 
         // Tænd/sluk knap
