--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         // Start musikken automatisk ved indlæsning
         window.addEventListener("load", () => {
             music.play().catch(() => {
-                musicBtn.textContent = "🔇"; // Autoplay ikke tilladt på nogle browsere
+                musicBtn.textContent = "🔊"; // Autoplay ikke tilladt på nogle browsere
             });
             musicBtn.textContent = "🔊"; // skifter ikon til "sluk"
         });
