--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
         }
 
        .content {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around; /* 👈 fordeler elementerne jævnt */
-    margin-top: 5px;
-}
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start; /* NY: gør så tekst ikke står helt i midten */
+            justify-content: space-around;
+            margin-top: 5px;
+            padding-left: 120px; /* NY: skubber indholdet mod højre */
+        }
 
         .pingvin-container {
             width: 600px;
@@ -67,6 +68,7 @@
         p, li {
             font-size: 40px;
             margin: 10px 0;
+            text-align: left; /* NY: så teksten starter fra venstre */
         }
 
         ul {
@@ -105,26 +107,26 @@
             font-weight: 600;
         }
 
-        /* Musikafspiller med gennemsigtig knap i nederste venstre hjørne */
+        /* Musikafspiller */
         .music-player {
             position: fixed;
-            bottom: 80px;   /* afstand fra bunden */
-            left: 80px;     /* afstand fra venstre kant */
-            z-index: 1000;  /* sikrer den ligger ovenpå alt andet */
+            bottom: 80px;
+            left: 80px;
+            z-index: 1000;
         }
 
         .music-player button {
-            font-size: 60px;          /* større ikon */
-            padding: 0;               /* ingen ekstra fyld */
-            border: none;             /* fjern kant */
-            background: transparent;  /* gennemsigtig baggrund */
-            color: #0D47A1;           /* farve på ikonet */
+            font-size: 60px;
+            padding: 0;
+            border: none;
+            background: transparent;
+            color: #0D47A1;
             cursor: pointer;
             transition: transform 0.2s;
         }
 
         .music-player button:hover {
-            transform: scale(1.2);    /* lille zoom ved hover */
+            transform: scale(1.2);
         }
     </style>
 </head>
@@ -134,7 +136,7 @@
         <h2>En healende måde at reflektere på</h2>
     </header>
 
-    <!-- Musikafspiller med gennemsigtig højttaler-knap -->
+    <!-- Musikafspiller -->
     <div class="music-player">
         <button id="musicBtn">🔊</button>
         <audio id="backgroundMusic" loop>
@@ -157,15 +159,13 @@
         const music = document.getElementById("backgroundMusic");
         const musicBtn = document.getElementById("musicBtn");
 
-        // Start musikken automatisk ved indlæsning
         window.addEventListener("load", () => {
             music.play().catch(() => {
-                musicBtn.textContent = "🔊"; // Autoplay ikke tilladt på nogle browsere
+                musicBtn.textContent = "🔊";
             });
-            musicBtn.textContent = "🔊"; // skifter ikon til "sluk"
+            musicBtn.textContent = "🔊";
         });
 
-        // Tænd/sluk knap
         musicBtn.addEventListener("click", () => {
             if (music.paused) {
                 music.play();
@@ -176,7 +176,6 @@
             }
         });
 
-        // Stop musikken øjeblikkeligt, når fanen/tabben ikke er aktiv
         document.addEventListener("visibilitychange", () => {
             if (document.hidden) {
                 music.pause();
