--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             width: 100%;
         }
 
-        .content {
+       .content {
             flex: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: space-around; /* 👈 fordeler elementerne jævnt */
             margin-top: 5px;
         }
 
@@ -64,23 +64,17 @@
             font-weight: 400;
         }
 
-        p {
+        p, li {
             font-size: 40px;
             margin: 10px 0;
-            text-align: center;
-            max-width: 800px;
-            word-wrap: break-word;
         }
 
         ul {
             list-style: none;
+            text-align: left;
+            display: inline-block;
+            margin-top: 10px;
             padding-left: 0;
-            margin: 10px 0;
-            text-align: center; /* bevarer centreret layout */
-        }
-
-        ul li {
-            margin: 5px 0;
         }
 
         button {
@@ -114,23 +108,23 @@
         /* Musikafspiller med gennemsigtig knap i nederste venstre hjørne */
         .music-player {
             position: fixed;
-            bottom: 80px;   
-            left: 80px;     
-            z-index: 1000;  
+            bottom: 80px;   /* afstand fra bunden */
+            left: 80px;     /* afstand fra venstre kant */
+            z-index: 1000;  /* sikrer den ligger ovenpå alt andet */
         }
 
         .music-player button {
-            font-size: 60px;          
-            padding: 0;               
-            border: none;             
-            background: transparent;  
-            color: #0D47A1;           
+            font-size: 60px;          /* større ikon */
+            padding: 0;               /* ingen ekstra fyld */
+            border: none;             /* fjern kant */
+            background: transparent;  /* gennemsigtig baggrund */
+            color: #0D47A1;           /* farve på ikonet */
             cursor: pointer;
             transition: transform 0.2s;
         }
 
         .music-player button:hover {
-            transform: scale(1.2);    
+            transform: scale(1.2);    /* lille zoom ved hover */
         }
     </style>
 </head>
@@ -166,9 +160,9 @@
         // Start musikken automatisk ved indlæsning
         window.addEventListener("load", () => {
             music.play().catch(() => {
-                musicBtn.textContent = "🔊"; 
+                musicBtn.textContent = "🔊"; // Autoplay ikke tilladt på nogle browsere
             });
-            musicBtn.textContent = "🔊"; 
+            musicBtn.textContent = "🔊"; // skifter ikon til "sluk"
         });
 
         // Tænd/sluk knap
