--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         .music-player {
             position: fixed;
             bottom: 80px;   /* afstand fra bunden */
-            left: 80px;     /* afstand fra venstre kant */
+            right: 80px;     /* afstand fra venstre kant */
             z-index: 1000;  /* sikrer den ligger ovenpå alt andet */
         }
 
