--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-around; /* 👈 fordeler elementerne jævnt */
-            margin-top: 15px;
+            margin-top: 5px;
         }
 
         .pingvin-container {
@@ -41,8 +41,8 @@
             aspect-ratio: 16 / 9;
             overflow: hidden;
             border-radius: 12px;
-            margin-bottom: 20px;
-            margin-top: 5px;
+            margin-bottom: 15px;
+            margin-top: 15px;
         }
 
         .pingvin-container img {
@@ -66,12 +66,12 @@
 
         p, li {
             font-size: 40px;
-            margin: 10px 0;
+            margin: 20px 0;
         }
 
         ul {
             list-style: none;
-            text-align: left;
+            text-align: center;
             display: inline-block;
             margin-top: 10px;
             padding-left: 0;
@@ -108,7 +108,7 @@
         /* Musikafspiller med gennemsigtig knap i nederste venstre hjørne */
         .music-player {
             position: fixed;
-            bottom: 80px;   /* afstand fra bunden */
+            bottom: 980px;   /* afstand fra bunden */
             right: 40px;     /* afstand fra venstre kant */
             z-index: 1000;  /* sikrer den ligger ovenpå alt andet */
         }
