--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         html, body {
             height: 100%;
-            margin: 0;
+            margin: 10;
             font-family: 'Poppins', sans-serif;
         }
 
@@ -108,8 +108,8 @@
         /* Musikafspiller med gennemsigtig knap i nederste venstre hjørne */
         .music-player {
             position: fixed;
-            bottom: 980px;   /* afstand fra bunden */
-            right: 40px;     /* afstand fra venstre kant */
+            bottom: 1080px;   /* afstand fra bunden */
+            right: 40px;     /* afstand fra kant */
             z-index: 1000;  /* sikrer den ligger ovenpå alt andet */
         }
 
